[gd_scene load_steps=5 format=3 uid="uid://du2icip2dhsul"]

[ext_resource type="Texture2D" uid="uid://c8imitp4ep8j" path="res://assets/sprites/newtransfer/buttom.png" id="1_8wdgp"]
[ext_resource type="Script" uid="uid://sb1nlnuys10e" path="res://scripts/button_2.gd" id="1_nvqgn"]
[ext_resource type="Texture2D" uid="uid://c50jgyu1sra8q" path="res://assets/sprites/newtransfer/buttom_pressed.png" id="2_nvqgn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j3oou"]
size = Vector2(21, 8)

[node name="Button2" type="Node2D"]
script = ExtResource("1_nvqgn")

[node name="NotPressedSprite" type="Sprite2D" parent="."]
position = Vector2(2.5, 1.5)
scale = Vector2(1.3125, 1.75)
texture = ExtResource("1_8wdgp")

[node name="PressedSprite" type="Sprite2D" parent="."]
position = Vector2(2.5, 1.5)
scale = Vector2(1.3125, 1.75)
texture = ExtResource("2_nvqgn")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, 2)
shape = SubResource("RectangleShape2D_j3oou")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
